# freetype

./: .gitignore  CMakeLists.txt  README.md
builds/windows/vc2013/: freetype.vcxproj
